--- a/templates/datapenilaian.html
+++ b/templates/datapenilaian.html
@@ -18,16 +18,13 @@
     <!-- /.content-header -->
     <!-- Main content -->
     <section class="content">
-        <div class="col-12">
-            <div class="col-3">
-                <h2><button type="button" class="btn btn-success  pull-right" data-toggle="modal" data-target="#myModal">Add Data Per Item</button></h2>
-            </div>
-            <div class="col-3">
-                <h2><button type="button" class="btn btn-success  pull-right" data-toggle="modal" data-target="#uploadFile">Add Data Via File</button></h2>
-            </div>
+        <div class="btn-group">
+
+            <button type="button" class="btn btn-outline-warning  pull-right" data-toggle="modal" data-target="#myModal">Add Data Per Item</button>
+            <button type="button" class="btn btn-outline-warning  pull-right" data-toggle="modal" data-target="#uploadFile">Add Data Via File</button>
+            <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#clusterProcess">Clustering Data</button>
+
         </div>
-
-
 
         <div class="card">
 
@@ -108,6 +105,50 @@
                 </div>
             </div>
 
+            <div id="clusterProcess" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        </div>
+                        <div class="modal-body">
+                            <form action="{{ url_for('clusterProcess') }}" method="POST" class="form-horizontal">
+                                <div class='card-body'>
+                                    <div class="card card-info">
+                                        <div class="card-header">
+                                            <h3 class="card-title">Clustering</h3>
+                                        </div>
+                                        <!-- Date -->
+                                        <div class="row">
+                                            <div class="m-4">
+                                                <!-- select -->
+                                                <div class="form-group">
+                                                    <label>Pilih tahun data yang mau dicluster</label>
+                                                    <select class="custom-select" name="dataSelect">
+                                                  <option>Semua data</option>
+                                                  <option>2021</option>
+                                                  <option>2022</option>
+                                                  <option>2023</option>                  
+                                                </select>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group m-4">
+                                            <button class="btn btn-primary" type="submit">Cluster Data</button>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </form>
+
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <div class="card-body p-0">
                 <table class="table table-striped table-hover">
@@ -124,6 +165,7 @@
                             <th>Apresiasi</th>
                             <th>Lebih Cepat</th>
                             <th>Aktif Bersama</th>
+                            <th>Tahun</th>
                             <th>Action</th>
                         </tr>
                     </thead>
@@ -141,6 +183,7 @@
                             <td>{{ user[7]}}</td>
                             <td>{{ user[8]}}</td>
                             <td>{{ user[9]}}</td>
+                            <td>{{ user[11]}}</td>
                             <td>
                                 <a href="/delete/{{ user[0] }}" class="btn btn-danger btn-xs" onclick="return confirm('Are You Sure For Delete?')">Delete</a>
                             </td>
