--- a/templates/associationResult.html
+++ b/templates/associationResult.html
@@ -16,11 +16,145 @@
         <!-- /.container-fluid -->
     </div>
     <!-- /.content-header -->
+
+
     <!-- Main content -->
 
     <section class="content">
+        <!-- Modal -->
+        <div id="variabel1" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body">                 
+                            <div class='card-body'>
+                                <div class="card card-info">
+                                    <div class="card-header">
+                                        <h3 class="card-title">Variabel yang berpengaruh adalah  </h3>
+                                        {%for i in listItem1%}
+                                        <h3>{{i[1]}}</h3>
+                                        {%endfor%}
+                                    </div>
+                                   
+                                </div>
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End Modal-->
+        <!-- Modal -->
+        <div id="variabel2" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body">                 
+                            <div class='card-body'>
+                                <div class="card card-info">
+                                    <div class="card-header">
+                                        <h3 class="card-title">Variabel yang berpengaruh adalah </h3>
+                                        {%for i in listItem2%}
+                                        <h3>{{i[1]}}</h3>
+                                        {%endfor%}
+                                    </div>
+                                   
+                                </div>
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End Modal-->
+        <!-- Modal -->
+        <div id="variabel3" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body">                 
+                            <div class='card-body'>
+                                <div class="card card-info">
+                                    <div class="card-header">
+                                        <h3 class="card-title">Variabel yang berpengaruh adalah </h3>
+                                    </div>
+                                   
+                                </div>
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End Modal-->
+        <!-- Modal -->
+        <div id="variabel4" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body">                 
+                            <div class='card-body'>
+                                <div class="card card-info">
+                                    <div class="card-header">
+                                        <h3 class="card-title">Variabel yang berpengaruh adalah </h3>
+                                    </div>
+                                   
+                                </div>
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End Modal-->
         <div class="container-fluid">
+            <h5 class="mb-2 mt-4">Small Box</h5>
+            <div class="row">
+                {% for i in count %}
+                <!-- ./col -->
+                <div class="col-lg-3 col-6">
+                <!-- small card -->
+                <div class="small-box bg-success">
+                <div class="inner">
+                    <h3>{{i}}<sup style="font-size: 20px"></sup></h3>
+                    <p>Rules</p>
+                </div>
+                <div class="icon">
+                    <i class="ion ion-stats-bars"></i>
+                </div>
+                    {%if loop.index == 1%}
+                        <a href="#variabel1" class="small-box-footer" data-toggle="modal" data-target="#variabel1">
+                            Check the rules<i class="fas fa-arrow-circle-right"></i>
+                        </a>
+                    {%endif%}
 
+                    {%if loop.index == 2%}
+                        <a href="#variabel2" class="small-box-footer" data-toggle="modal" data-target="#variabel2">
+                        Check the rules<i class="fas fa-arrow-circle-right"></i>
+                        </a>
+                    {%endif%}
+
+                    {%if loop.index == 3%}
+                        <a href="#variabel3" class="small-box-footer" data-toggle="modal" data-target="#variabel3">
+                        Check the rules<i class="fas fa-arrow-circle-right"></i>
+                        </a>
+                    {%endif%}
+
+                    {%if loop.index == 4%}
+                        <a href="#variabel4" class="small-box-footer" data-toggle="modal" data-target="#variabel4">
+                        Check the rules<i class="fas fa-arrow-circle-right"></i>
+                        </a>
+                    {%endif%}
+                </div>
+            </div>
+          <!-- ./col -->
+          {%endfor%}
+          
+       
             <div class="card-header">
                 <h3 class="card-title">Cluster </h3>
             </div>
