--- a/templates/clustering-result.html
+++ b/templates/clustering-result.html
@@ -22,18 +22,26 @@
         <!-- /.content-header -->
         <!-- Main content -->
         <section class="content">
+            <div id="cluster1">{{count[0]}}</div>
+            <div id="cluster2">{{count[1]}}</div>
+            <div id="cluster3">{{count[2]}}</div>
+            <div id="cluster4">{{count[3]}}</div>
+            <div class="card">
+                <div id="clusteringResult">
 
-            <div id="clusteringResult">
-
+                </div>
+    
+                <div id='myDiv'>
+                    <!-- Plotly chart will be drawn inside this DIV -->
+                </div>
+                <div id='donutCluster'>
+                    <!-- Plotly chart will be drawn inside this DIV -->
+                </div>
+                <div id='linechart'>
+                    <!-- Plotly chart will be drawn inside this DIV -->
+                </div>
             </div>
-
-            <div id='myDiv'>
-                <!-- Plotly chart will be drawn inside this DIV -->
-            </div>
-            <div id='donutCluster'>
-                <!-- Plotly chart will be drawn inside this DIV -->
-            </div>
-            
+                        
             <div class="btn-group">
                 <button type="button" class="btn btn-outline-warning  pull-right" data-toggle="modal" data-target="#asosiasi">Asosiasi Data</button>
             </div>
@@ -90,20 +98,14 @@
                 <!-- /.card-header -->
 
 
-                <div class="card-body p-0">
-                    <!--
-                <div class="row">
-                    <div class="col-sm-12 col-md-6">
-                        <div class="dt-buttons btn-group flex-wrap">
-                            <button class="btn btn-secondary buttons-csv buttons-html5" aria-controls="exaple1" type="button">
-                                <span>CSV</span>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                -->
-                    <table class="table table-sm" class="table table-bordered table-striped ">
-                        <thead>
+                <div class="card">
+                    <div class="card-header">
+                        <h3 class="card-title">DataTable with default features</h3>
+                      </div>
+                    <div class="card-body" >
+                        <table id="clustering" class="table table-striped table-hover">
+                            <thead>
+                    
                             <tr>
                                 <th style="width: 10px">No.</th>
                                 <th>NIK</th>
@@ -149,19 +151,41 @@
     </div>
 </body>
 <!-- DataTables  & Plugins -->
-<script src="../static/plugins/datatables/jquery.dataTables.min.js"></script>
-<script src="../static/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
-<script src="../static/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
-<script src="../static/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
-<script src="../static/plugins/datatables-buttons/js/dataTables.buttons.min.js"></script>
-<script src="../static/plugins/datatables-buttons/js/buttons.bootstrap4.min.js"></script>
-<script src="../static/plugins/jszip/jszip.min.js"></script>
-<script src="../static/plugins/pdfmake/pdfmake.min.js"></script>
-<script src="../static/plugins/pdfmake/vfs_fonts.js"></script>
-<script src="../static/plugins/datatables-buttons/js/buttons.html5.min.js"></script>
-<script src="../static/plugins/datatables-buttons/js/buttons.print.min.js"></script>
-<script src="../.static/plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
-<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+<script type="text/javascript" src="https://cdn.datatables.net/buttons/1.3.1/js/dataTables.buttons.min.js"></script> 
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+<script type="text/javascript" src="https://cdn.datatables.net/buttons/1.3.1/js/buttons.html5.min.js"></script>
+<!-- /.content-wrapper -->
+<!-- jQuery -->
+<script src="{{url_for ('static', filename='plugins/jquery/jquery.min.js' ) }}"></script>
+<!-- jQuery UI 1.11.4 -->
+<script src="{{url_for ('static', filename='plugins/jquery-ui/jquery-ui.min.js' ) }}"></script>
+<!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
+<script>
+    $.widget.bridge('uibutton', $.ui.button)
+</script>
+<!-- Bootstrap 4 -->
+<script src="{{url_for ('static', filename='plugins/bootstrap/js/bootstrap.bundle.min.js' ) }}"></script>
+<!-- ChartJS -->
+<script src="{{url_for ('static', filename='plugins/chart.js/Chart.min.js' ) }}"></script>
+<!-- Sparkline -->
+<script src="{{url_for ('static', filename='plugins/sparklines/sparkline.js' ) }}"></script>
+<!-- Summernote -->
+<script src="{{url_for ('static', filename='plugins/summernote/summernote-bs4.min.js' ) }}"></script>
+<!-- overlayScrollbars -->
+<script src="{{url_for ('static', filename='plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js' ) }}"></script>
+<!-- DataTables  & Plugins -->
+<script src="{{url_for ('static', filename='plugins/datatables/jquery.dataTables.min.js' ) }}"></script>
+<script src="{{url_for ('static', filename='plugins/datatables-bs4/js/dataTables.bootstrap4.min.js' ) }}"></script>
+<script src="{{url_for ('static', filename='plugins/datatables-responsive/js/dataTables.responsive.min.js' ) }}"></script>
+<script src="{{url_for ('static', filename='plugins/datatables-responsive/js/responsive.bootstrap4.min.js' ) }}"></script>
+<script src="{{url_for ('static', filename='plugins/datatables-buttons/js/dataTables.buttons.min.js' ) }}"></script>
+<script src="{{url_for ('static', filename='plugins/datatables-buttons/js/buttons.bootstrap4.min.js' ) }}"></script>
+<script src="{{url_for ('static', filename='plugins/jszip/jszip.min.js' ) }}"></script>
+<script src="{{url_for ('static', filename='plugins/pdfmake/pdfmake.min.js' ) }}"></script>
+<script src="{{url_for ('static', filename='plugins/pdfmake/vfs_fonts.js' ) }}"></script>
+<script src="{{url_for ('static', filename='plugins/datatables-buttons/js/buttons.html5.min.js' ) }}"></script>
+<script src="{{url_for ('static', filename='plugins/datatables-buttons/js/buttons.print.min.js' ) }}"></script>
+<script src="{{url_for ('static', filename='plugins/datatables-buttons/js/buttons.colVis.min.js' ) }}"></script>
 <script>
     d3.json("{{ url_for('viewPCA') }}", function(err, rows) {
         function unpack(rows, key) {
@@ -202,8 +226,7 @@
         };
         Plotly.newPlot('myDiv', data, layout);
     });
-</script>
-<script>
+
     window.onload = function() {
     var dataset = {{ count | tojson }};
     var data = [{
@@ -243,6 +266,44 @@
 
     Plotly.newPlot('donutCluster', data, layout);
     }
+
+    
+    var column = ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'];
+    var dataset = {{ meanList| tojson }};
+
+    var trace1 = {
+        x: ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'],
+        y: [dataset[0],dataset[1],dataset[2],dataset[3],dataset[4],dataset[5],dataset[6],dataset[7]],
+        mode:'lines',
+        type: 'scatter'
+    };
+
+    var trace2 = {
+        x: ['kpi','performance','competency','learning point','kerja ibadah','apresiasi','lebih cepat lebih baik', 'aktif bersama'],
+        y: [dataset[8],dataset[9],dataset[10],dataset[11],dataset[12],dataset[13],dataset[14],dataset[15]],
+        mode:'lines',
+        type: 'scatter'
+    };
+    console.log(dataset)
+    var data = [trace1, trace2];
+    var layout={
+        xaxis:{
+            type:'category'
+        }
+    }
+    Plotly.newPlot('linechart', data);
+    if ( ! $.fn.DataTable.isDataTable( '#clustering' ) ) {
+  $('#clustering').dataTable({
+    dom: 'Bfrtip',
+    buttons: ["csv", "excel", "pdf", "print", "colvis"]
+  });
+}
+</script>
+<script>
+    
+</script>
+<script>
+    
 </script>
 
 <!-- /.content-wrapper -->
